# comando

./: .env  .gitignore  LICENSE  README.md  build.sh  dev.env  next.config.ts  package-lock.json  package.json  pyproject.toml  ruff.toml
app/: layout.tsx  page.tsx
demos/: cec.md  itach.py  lgtv.py  rpi.md
server/comando/: __init__.py  comando.toml
server/comando/api/: config.py  server.py
server/comando/api/router/: __init__.py
server/comando/controller/: core.py
server/comando/device/playback/: appletv.py  wiim.py
server/comando/device/processor/: minidsp.py
server/comando/helpers/: itach.py  telnet.py
src/comando/: __init__.py
src/comando/api/: server.py
src/comando/api/router/: devices.py
src/comando/controller/: __init__.py
src/comando/device/: __init__.py
src/comando/device/switch/: vertex.py
src/comando/helpers/: cec.py
